@@ -1,5 +1,5 @@
 if config['compass']
-  gem 'compass', :version => '~> 0.12.alpha.4'
+  gem 'compass', :version => '~> 0.12.rc.1'
   after_bundler do
     remove_file 'app/assets/stylesheets/application.css'
     create_file 'app/assets/stylesheets/application.css.sass' do <<-SASS
