@@ -2,7 +2,7 @@
 # https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/cucumber.rb
 
 if config['cucumber']
-  gem 'cucumber-rails', '>= 1.2.1', :group => :test
+  gem 'cucumber-rails', '>= 1.3.0', :group => :test
   gem 'capybara', '>= 1.1.2', :group => :test
   gem 'database_cleaner', '>= 0.7.1', :group => :test
   gem 'launchy', '>= 2.0.5', :group => :test
