@@ -3,6 +3,14 @@ h1. CHANGELOG
 h2. 1.1.3 February 21, 2012
 
 * fix typo for machinist in 'rspec' recipe
+* update gem 'cucumber-rails' from 1.2.1 to 1.3.0
+* update gem 'factory_girl_rails' from 1.6.0 to 1.7.0
+* update gem 'devise' from 2.0.0 to 2.0.4
+* update gem 'mongoid' from 2.4.3 to 2.4.4
+* update gem 'bson_ext' from 1.3.1 to 1.5.2
+* update gem 'rails-backbone' from 0.6.1 to 0.7.0
+* update gem 'compass' from 0.12.alpha.4 to 0.12.rc.1
+* update gem 'bootstrap-sass' from 2.0.0 to 2.0.1
 
 h2. 1.1.2 February 12, 2012
 
@@ -39,7 +47,6 @@ h2. 1.1.0 January 28, 2012
 * update gem 'database_cleaner' from 0.7.0 to 0.7.1
 * update gem 'devise' from 1.5.0 to 2.0.0
 * update gem 'haml' from 3.1.2 to 3.1.4
-* update gem 'bson_ext' from 1.3.1 to 1.5.2
 * update gem 'mongoid' from 2.3.3 to 2.4.3
 * update gem 'omniauth' from 1.0.0 to 1.0.2
 * update gem 'rspec-rails' from 2.8.0.rc1 to 2.8.1
